--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
 <meta name="format-detection" content="telephone=no">
 <title>site-c</title>
-<link rel="stylesheet" href="./style.css">
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" charset="UTF-8" href="./images/slick.css">
 <link rel="stylesheet" type="text/css" href="./images/slick-theme.css">
+<link rel="stylesheet" href="./style.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -89,10 +89,19 @@
 							</div>
 							<div class="slogan">
 								<div class="box">
-									<h1>Company</h2>
-									<h2>기계 개발 및 제조 전문</h1>
+									<h1>Company</h1>
+									<h2>기계 개발 및 제조 전문</h2>
 									<p>친환경적이고 우수한 품질의 제품을 설계,<br>개발 및 생산하는 기계 전문 제조업체입니다.</p>
+									<div class="button">
+										<a href="#">회사소개 바로가기</a>
+									</div>
+									<div class="paging_box">
+										<span class="current_page"></span>
+										<span class="slash">/</span>
+										<span class="total_page"></span>
+									</div>
 								</div>
+								
 							</div>
 						</div>
 
@@ -114,14 +123,19 @@
 						<div class="content_box limit">
 
 							<div class="title">
-								<h1>사업분야</h1>
+								<p>Products</p>
+								<h1>생산제품</h1>
 							</div>
 
 							<div class="cb2_list">
 								<ul>
 									<li style="background-image: url(images/cb2_img1.jpg);">
 										<a href="#">
-											<div class="image_cover_dark"></div>
+											<div class="image_cover_dark">
+												<i class="fas fa-search-plus"></i>
+												<h1>ERP 컨설팅</h1>
+												<p>ERP Consulting</p>
+											</div>
 											<div class="text">
 												<h1>시스템</h1>
 												<p>System</p>
@@ -158,6 +172,7 @@
 									<div class="cb3_contact">
 	
 										<div class="title">
+											<p>Contact Us</p>
 											<h1>고객지원</h1>
 										</div>
 
@@ -197,7 +212,7 @@
 	<footer id="footer">
 		<div class="footer_container">
 			<div class="footer_logo">
-				<img src="./images/logo_white.png" alt="logo">
+				<img src="./images/logo_black.png" alt="logo">
 			</div>
 			<div class="footer_info">
 				<p>회사명 : 주식회사 컴퍼니 ㅣ 대표자명 : 홍길동 ㅣ 사업자 등록번호 : 000-00-00000 ㅣ 개인정보처리방침</p>
@@ -222,12 +237,28 @@
 <script type="text/javascript" src="./images/slick.min.js"></script>
 
 <script>
-	$('.slick_main').slick({
+
+$('.slick_main').on('init reInit afterChange', function (event, slick, currentSlide, nextSlide) {
+  if(!slick.$dots){
+  	return;
+  }
+  var i = (currentSlide ? currentSlide : 0) + 1;
+  $('.current_page').text('0' + i);
+  $('.total_page').text('0' + (slick.$dots[0].children.length));
+});
+
+$('.slick_main').slick({
+	// infinite: false,
+	slidesToShow: 1,
+	autoplay: true,
+	dots: true,
 // 		dots: true,
-//   slidesToShow: 2,
+// 		infinite: false,
+//   slidesToShow: 1,
 //   slidesToScroll: 1,
 //   arrows: false,
 //   autoplay: true,
+//   dots: true,
 //   autoplaySpeed: 4000,
 //   responsive: [
 // 					{  
