--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
 						<div class="content_box limit">
 							<div class="cb1_box">
 								<div class="cb1_img" >
-									<div>
-										<p>Company</p>
-									</div>
+									<div class="square1"></div>
+									<div class="square2"></div>
+									<div class="square3"></div>
 								</div>
 								<div class="cb1_text">
-									<h1>우수한 기술력으로 고객 만족을 최우선으로 합니다.</h1>
+									<h1>Company에 방문해 주셔서<br>감사합니다.</h1>
 									<p>
-										시스템 구축 전문업체로서 우수한 기술력과 책임수행 능력을 인정 받은 회사 입니다.</p>
+										Company는 친환경적이고 우수한 품질의 제품을 설계 개발 및 생산하는 기계 전문 제조업체입니다.</p>
+										<p>신기술, 신공법으로 기존의 틀을 바꾸는 새로운 도전을 합니다.<br>제조 전반에 걸쳐 자동화 기술을 도입함으로써 친환경적이고 최고의 품질을 자랑합니다.</p>
 								</div>
 							</div>
 						</div>
@@ -133,30 +134,41 @@
 										<a href="#">
 											<div class="image_cover_dark">
 												<i class="fas fa-search-plus"></i>
-												<h1>ERP 컨설팅</h1>
-												<p>ERP Consulting</p>
+												<h1>판금 제작</h1>
+												<p>Sheet Metal</p>
+												<p class="more">자세히 보기</p>
 											</div>
 											<div class="text">
-												<h1>시스템</h1>
-												<p>System</p>
+												<h1>판금 제작</h1>
+												<p>Sheet Metal</p>
 											</div>
 										</a>
 									</li>
 									<li style="background-image: url(images/cb2_img2.jpg);">
 										<a href="#">
-											<div class="image_cover_dark"></div>
+											<div class="image_cover_dark">
+												<i class="fas fa-search-plus"></i>
+												<h1>CNC 가공</h1>
+												<p>CNC Maching</p>
+												<p class="more">자세히 보기</p>
+											</div>
 											<div class="text">
-												<h1>ERP 컨설팅</h1>
-												<p>ERP Consulting</p>
+												<h1>CNC 가공</h1>
+												<p>CNC Maching</p>
 											</div>
 										</a>
 									</li>
 									<li style="background-image: url(images/cb2_img3.jpg);">
 										<a href="#">
-											<div class="image_cover_dark"></div>
+											<div class="image_cover_dark">
+												<i class="fas fa-search-plus"></i>
+												<h1>레이저 가공</h1>
+												<p>Laser Maching</p>
+												<p class="more">자세히 보기</p>
+											</div>
 											<div class="text">
-												<h1>솔루션</h1>
-												<p>Solution</p>
+												<h1>레이저 가공</h1>
+												<p>Laser Maching</p>
 											</div>
 										</a>
 									</li>
