슬라이드 버튼 삭제

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 									<div class="button">
 										<a href="#">회사소개 바로가기</a>
 									</div>
+
+									<div class="arrowSlider">
+										
+									</div>
+									
 									<div class="paging_box">
 										<span class="current_page"></span>
 										<span class="slash">/</span>
@@ -264,6 +269,8 @@ $('.slick_main').slick({
 	slidesToShow: 1,
 	autoplay: true,
 	dots: true,
+	arrows: false,
+
 // 		dots: true,
 // 		infinite: false,
 //   slidesToShow: 1,
